added a GET route to list customers
